# meowtion

./: .coveragerc  .gitignore  LICENSE  README.md  SECURITY.md  TESTING.md  requirements-dev.txt
.github/: dependabot.yml
.github/workflows/: codeql.yml  test.yml
app/dashboard/: README.md  app.py  dashboard_view.py  requirements.txt  teammate_sandbox.py
app/dashboard/.streamlit/: config.toml
app/dashboard/meowtion_dash/: __init__.py  auth.py  charts.py  data.py  firebase.py  live.py  theme.py  weather.py
app/dashboard/static/: account.html  dev.html  privacy.html
app/dashboard/tests/: test_data.py  test_more.py
app/firebase/: .firebaserc  README.md  database.rules.json  firebase.json  storage.rules
app/firebase/functions/: .gitignore  (+3 more)
docs/: security-and-testing.md
docs/technical/: README.md  build.ps1  main.tex  references.bib
firmware/: README.md
firmware/collar/: CMakeLists.txt  README.md  app.overlay  build.ps1  pm_static.yml  prj.conf
firmware/collar/src/: activity.c  activity.h  audio.c  audio.h  audio_codec.h  battery.c  battery.h  ble.c  ble.h  classifier.c  classifier.h  imu.c  imu.h  main.c  model_loader.h  ota.c  ota.h  production.c  production.h  streaming.c  streaming.h  tflm_classifier.cpp
firmware/common/: meow_ota.h  meow_protocol.h
firmware/station/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/test/: Makefile  test_activity.c  test_audio_codec.c  test_classifier.c  test_util.h
hardware/: README.md
hardware/3d-files/: collar-back-shell.stl  collar-silicone-skin.stl  front-shell.stl  station-back-shell.stl
(+56 files in other folders)
